# Portfolio-Dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  decrypt_pdfs.py  download_sinopac_pdfs.py  index.html  parse_statements.py  requirements.txt
backend/: pyproject.toml
backend/src/invest/: app.py
backend/tests/analytics/: test_attribution.py  test_concentration.py  test_drawdown.py  test_holdings_today_parity.py  test_monthly_parity.py  test_monthly_phase14_1_parity.py  test_ratios.py  test_sectors.py  test_tax_pnl.py  test_twr.py  test_xirr.py
backend/tests/brokerage/: test_shioaji_client.py  test_shioaji_sync.py
backend/tests/core/: test_state.py
backend/tests/domain/: test_cashflow.py  test_money.py  test_position.py  test_trade.py
backend/tests/http/: conftest.py  test_benchmarks_daily.py  test_computed_routers.py  test_data_routers.py  test_openapi_export.py  test_openapi_parity.py  test_scaffolding.py  test_summary_populated.py  test_today_admin.py
backend/tests/ingestion/: test_bank_parser.py  test_foreign_parser.py  test_statement_parser.py  test_trade_seeder.py  test_trade_verifier.py  test_tw_holdings.py  test_tw_naming.py  test_tw_parser.py  test_tw_statement.py
backend/tests/jobs/: test_backfill.py  test_dlq.py  test_positions.py  test_retry_failed.py  test_snapshot.py  test_trade_backfill.py  test_verify_month.py
backend/tests/legacy/: conftest.py  test_analytics_daily_twr.py  test_analytics_reprice.py  test_backfill_runner.py  test_backfill_runner_phase10.py  test_backfill_runner_phase5.py  test_backfill_runner_phase6.py  (+13 more)
(+282 files in other folders)
