[project]
name = "invest"
version = "0.1.0"
description = "Personal investment dashboard backend (Shioaji-canonical rewrite)"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
pdf = [
    "pdfplumber>=0.10",
    "pikepdf>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
